--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
           <div class="desarrollador-item scroll-animado">
             <div class="desarrollador-foto">
-              <img src="img/dev2.jpg" alt="Angie Marks Sanchez" />
+              <img src="assets/img/angie.jpeg" alt="Angie Marks Sanchez" />
             </div>
             <h3 class="desarrollador-nombre">Angie Marks Sanchez</h3>
             <p class="desarrollador-rol">Desarrollo general</p>
@@ -223,7 +223,7 @@
 
           <div class="desarrollador-item scroll-animado">
             <div class="desarrollador-foto">
-              <img src="img/dev3.jpg" alt="Kevin Calderón Zúñiga" />
+              <img src="assets/img/kevin.jpeg" alt="Kevin Calderón Zúñiga" />
             </div>
             <h3 class="desarrollador-nombre">Kevin Calderón Zúñiga</h3>
             <p class="desarrollador-rol">Desarrollo general</p>
